# forecasting-benchmark

./: LICENSE  README.md  REFACTORING_SUMMARY.md  pyproject.toml
script/: 46929_Lecture1_Examples.ipynb  Tutorial-01-SeasonalDecomposition-2025.ipynb  Tutorial-02-ModelFreePrediction-2025.ipynb  Tutorial-03-ARMA-2025.ipynb  example_kalman_forecaster.py  forecaster_demo.ipynb  test_kalman_forecaster.py
src/: __init__.py
src/forecast/: README.md  __init__.py  base_forecaster.py  evaluation.py  kalman_filter.py
