[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forecast"
version = "0.1.0"
description = "Your package description"
requires-python = ">=3.8"
dependencies = [
    # Move your requirements.txt contents here
    "numpy>=1.20.0",
    "matplotlib>=3.3.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"